# serializer version: 1
# name: test_binary_sensor[System Monitor Charging - attributes]
  ReadOnlyDict({
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery_charging',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'System Monitor Charging',
  })
# ---
# name: test_binary_sensor[System Monitor Charging - state]
  'off'
# ---
# name: test_binary_sensor[System Monitor Process pip - attributes]
  ReadOnlyDict({
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'running',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'System Monitor Process pip',
    <EntityStateAttribute.ICON: 'icon'>: 'mdi:cpu-64-bit',
  })
# ---
# name: test_binary_sensor[System Monitor Process pip - state]
  'on'
# ---
# name: test_binary_sensor[System Monitor Process python3 - attributes]
  ReadOnlyDict({
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'running',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'System Monitor Process python3',
    <EntityStateAttribute.ICON: 'icon'>: 'mdi:cpu-64-bit',
  })
# ---
# name: test_binary_sensor[System Monitor Process python3 - state]
  'on'
# ---
